--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   easy_localization: ^1.3.5
   font_awesome_flutter: ^8.5.0
   carousel_slider: ^1.4.1
+  image_picker: ^0.6.3+1
+  dotted_border: ^1.0.4
 
 dev_dependencies:
   flutter_test:
