--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   carousel_slider: ^1.4.1
   image_picker: ^0.6.3+1
   dotted_border: ^1.0.4
+  auto_animated: ^2.0.1
 
 dev_dependencies:
   flutter_test:
